--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "react-dom": "^19.2.1",
-    "@google/genai": "^1.31.0",
     "react": "^19.2.1",
-    "lucide-react": "^0.555.0"
+    "lucide-react": "0.292.0",
+    "@google/genai": "0.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
